--- a/src/pages/Notifications/NotificationsPage.module.scss
+++ b/src/pages/Notifications/NotificationsPage.module.scss
@@ -2,7 +2,6 @@
 @use '@styles/mixins.scss' as m;
 
 .notifications {
-  padding: 2rem 1rem;
   position: relative;
 
   width: 100vw;
@@ -16,6 +15,7 @@
   }
 
   &__title {
+    padding-top: 2rem;
     @include m.text-style(v.$font-title, v.$font-weight-bold, v.$line-height-default);
     color: var(--text-color);
     letter-spacing: 0.05rem;
